# Nodemind

./: .gitignore  HowItWorks.md  LICENSE  README.md  Technical_design.md  index.html  package-lock.json  package.json
poc/: manifest.webmanifest  sw.js  voice-checklist.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: prompts.toml
src-tauri/resources/models/ggml-small-encoder.mlmodelc/: metadata.json  model.mil
src-tauri/src/: db.rs  graph.rs  llm.rs  main.rs  pipeline.rs  prompts.rs
src/components/: DriftAlertCard.tsx  GraphLensBar.tsx  InlineEditor.tsx  MomentumBar.tsx  NodeDetailPanel.tsx  Sidebar.tsx  SuggestionModal.tsx  Tooltip.tsx
src/hooks/: useGraphData.ts  useListening.ts
src/types/: index.ts
src/views/: CalendarView.tsx  DashboardView.tsx  FocusMode.tsx  FogView.tsx  HistoricalNotesView.tsx  KnowledgeGraphView.tsx  MeetingsView.tsx  MentalMapView.tsx  SettingsView.tsx  TaskListView.tsx  TodayView.tsx
